# PowerTunerConsole

./: .gitmodules  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml
.github/workflows/: build_test.yml
src/: ConsoleStyle.cpp  ConsoleStyle.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Classes/: ConsoleSettings.cpp  ConsoleSettings.h  GamepadWorker.cpp  GamepadWorker.h  TTSWorker.cpp  TTSWorker.h
src/Include/: AppQuitBehaviour.h  Daemon.h  FloatIconSize.h  GamepadButton.h  GamepadMap.h  TTSID.h
src/Resources/: resources.qrc  version.h.in
src/Resources/Windows/: win.rc.in
src/Tabs/: ConsoleTab.cpp  ConsoleTab.h
src/Tabs/Daemons/: DaemonsTab.cpp  DaemonsTab.h
src/Tabs/Daemons/Widgets/: DaemonWidget.cpp  DaemonWidget.h
src/Tabs/FanControl/: FanControlTab.cpp  FanControlTab.h
src/Tabs/FanControl/Widgets/: FanControlWidget.cpp  FanControlWidget.h  FanCurveWidget.cpp  FanCurveWidget.h
src/Tabs/Home/: HomeTab.cpp  HomeTab.h
src/Tabs/Home/Widgets/: CPUInfoWidget.cpp  CPUInfoWidget.h  GPUInfoWidget.cpp  GPUInfoWidget.h  PowerTunerWidget.cpp  PowerTunerWidget.h  SystemInfoWidget.cpp  SystemInfoWidget.h
src/Tabs/Include/: AddonTab.h
src/Tabs/Log/: LogTab.cpp  LogTab.h
src/Tabs/Log/Widgets/: ConsoleLogText.cpp  ConsoleLogText.h
src/Tabs/OS/Linux/AMDGPU/: AMDGPUTab.cpp  AMDGPUTab.h
src/Tabs/OS/Linux/AMDGPU/Widgets/: DPMForcePerformanceLevelWidget.cpp  DPMForcePerformanceLevelWidget.h  EngineClockSCLKWidget.cpp  EngineClockSCLKWidget.h  PowerDPMStateWidget.cpp  PowerDPMStateWidget.h
src/Tabs/OS/Linux/IntelGPU/: IntelGPUTab.cpp  IntelGPUTab.h
src/Tabs/OS/Linux/IntelGPU/Widgets/: GPUBoostWidget.cpp  GPUBoostWidget.h  GPUFrequencyWidget.cpp  GPUFrequencyWidget.h
src/Tabs/OS/Linux/SysFs/: SysFsTab.cpp  SysFsTab.h
src/Tabs/OS/Linux/SysFs/Widgets/: BlockQueueSchedulerContainer.cpp  BlockQueueSchedulerContainer.h  BlockQueueSchedulerWidget.cpp  BlockQueueSchedulerWidget.h  CPUFrequencyWidget.cpp  CPUFrequencyWidget.h  CPUIdleGovernorWidget.cpp  CPUIdleGovernorWidget.h  CPUParkWidget.cpp  CPUParkWidget.h  CPUSMTWidget.cpp  CPUSMTWidget.h  CPUScalingGovernorWidget.cpp  CPUScalingGovernorWidget.h  MiscPowerManagementContainer.cpp  MiscPowerManagementContainer.h  MiscPowerManagementWidget.cpp  MiscPowerManagementWidget.h
src/Tabs/OS/Linux/SysFs/Widgets/AMD/: AMDPStateWidget.cpp  AMDPStateWidget.h
src/Tabs/OS/Windows/PowerScheme/: PowerSchemeTab.cpp  PowerSchemeTab.h
src/Tabs/OS/Windows/PowerScheme/Include/: MinMaxSliderWidget.cpp  MinMaxSliderWidget.h  OptionsWidget.cpp  OptionsWidget.h  PowerSettingWidget.cpp  PowerSettingWidget.h
src/Tabs/OS/Windows/PowerScheme/Widgets/: SchemeSelectInput.cpp  SchemeSelectInput.h  SchemeSettingsWidget.cpp  SchemeSettingsWidget.h  SchemesOptionsWidget.cpp  SchemesOptionsWidget.h
src/Tabs/OS/Windows/PowerScheme/Widgets/SchemeOptionsWidgets/: CopySchemeSettingsWidget.cpp  CopySchemeSettingsWidget.h  DuplicateSchemeWidget.cpp  DuplicateSchemeWidget.h  MiscGlobalOptionsWidget.cpp  MiscGlobalOptionsWidget.h  SchemeActionsWidget.cpp  SchemeActionsWidget.h
src/Tabs/Profiles/: ProfilesTab.cpp  ProfilesTab.h
src/Tabs/Settings/: SettingsTab.cpp  SettingsTab.h
src/Tabs/Settings/Widgets/: AddDaemonOptions.cpp  AddDaemonOptions.h  ClientOptions.cpp  ClientOptions.h  DaemonOptions.cpp  DaemonOptions.h
src/Tabs/Widgets/: ConsoleBaseWidget.h  ConsoleButton.cpp  ConsoleButton.h  ConsoleCheckbox.cpp  ConsoleCheckbox.h  ConsoleLabel.cpp  ConsoleLabel.h  ConsoleLineEdit.cpp  ConsoleLineEdit.h  ConsoleSelect.cpp  ConsoleSelect.h  ConsoleSlider.cpp  ConsoleSlider.h  ConsoleSliderBase.cpp  ConsoleSliderBase.h  ConsoleSliderLevels.cpp  ConsoleSliderLevels.h  ConsoleSliderUnit.cpp  ConsoleSliderUnit.h  ConsoleSpinBox.cpp  ConsoleSpinBox.h  ConsoleWidget.cpp  ConsoleWidget.h  SectionItemWidget.cpp  SectionItemWidget.h  SectionWidget.cpp  SectionWidget.h
src/Widgets/: FloatMicroKeyboard.cpp  FloatMicroKeyboard.h  FloatingIcon.cpp  FloatingIcon.h  Modal.h  ModalYesNo.cpp  ModalYesNo.h  StatusBar.cpp  StatusBar.h  TrayIcon.cpp  TrayIcon.h
